; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/openjpeg/src/lib/openjp2/extr_openjpeg.c_opj_get_data_length_from_file.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/openjpeg/src/lib/openjp2/extr_openjpeg.c_opj_get_data_length_from_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SEEK_END = common dso_local global i32 0, align 4
@SEEK_SET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @opj_get_data_length_from_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @opj_get_data_length_from_file(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  store i32* %0, i32** %2, align 8
  store i64 0, i64* %3, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = load i32, i32* @SEEK_END, align 4
  %6 = call i32 @OPJ_FSEEK(i32* %4, i32 0, i32 %5)
  %7 = load i32*, i32** %2, align 8
  %8 = call i64 @OPJ_FTELL(i32* %7)
  store i64 %8, i64* %3, align 8
  %9 = load i32*, i32** %2, align 8
  %10 = load i32, i32* @SEEK_SET, align 4
  %11 = call i32 @OPJ_FSEEK(i32* %9, i32 0, i32 %10)
  %12 = load i64, i64* %3, align 8
  %13 = trunc i64 %12 to i32
  ret i32 %13
}

declare dso_local i32 @OPJ_FSEEK(i32*, i32, i32) #1

declare dso_local i64 @OPJ_FTELL(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
